--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hardikpatel0884/TaskManager#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "encrypt-js": "^1.0.0",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "express-session": "^1.15.6",
